tests/bad/variadic_format_no_string.oc
/// fail: Variadic-format function must have last positional argument of type 'str'

[extern "printf"]
[variadic_format]
def my_printf(a: u32, ...): i32

def main() {
    my_printf(1, `{1 + 2} = {0x56:02x}`)
}